<resources>
    <string name="app_name">Math Game App</string>

    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Math Game !!</string>
    <string name="name">Name :</string>
    <string name="title_activity_question_frame">QuestionFrame</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_question">QuestionActivity</string>
    <string name="select_level">Select a level :</string>
    <string name="player_name">Enter Player Name</string>
    <string name="restart">Restart</string>
    <string name="next">Next</string>
    <string name="check_answer">Check Answer</string>
</resources>
