<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mycompany.mathgameapp.QuestionActivity">

    <TextView
        android:inputType="number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Questions!!"
        android:id="@+id/questionField"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_above="@+id/answerField"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="79dp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="89dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_answer"
                android:id="@+id/checkAnswerButton"
                android:layout_row="1"
                android:layout_column="1"
                android:onClick="onClickCheck" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restart"
                android:id="@+id/restartButton"
                android:onClick="onClickRestart"
                android:layout_alignParentBottom="true"
                android:layout_alignRight="@+id/questionField"
                android:layout_alignEnd="@+id/questionField"
                android:layout_row="2"
                android:layout_column="0" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:id="@+id/NextButton"
                android:layout_row="2"
                android:layout_column="4"
                android:onClick="onClickNext" />

        </TableRow>

    </TableLayout>

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/answerField"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickAnswerField" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Player : "
        android:id="@+id/player"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp" />
</RelativeLayout>
